Solved issues with traffic estimator msn
git-svn-id: file:///semplestb/final_repo@1300 02200ff9-b5b2-46f0-9171-221b09c08c7b